# recruitment-2023-spring

./: CMakeLists.txt  README.md  build.sh
data-generation/: generate.py
docs/: baseline.txt  baseline.xml  log  pre.typ  test-report-0605-2155.txt  test-report-0606-1600-notranspose.txt  test-report-0611-1319  test-report-0611-1835.txt
include/: Matrices.hh
include/leedagee/: CSR.hh  SparseRepresents.hh  Transpose.hh
src/: Matrices.cc  SpMM_base.cc  SpMM_opt.cc
src/leedagee/: CSR.cc  SparseRepresents.cc  Transpose.cc
tests/: SpMM_test.cc
utils/: timer.hh
